<resources>
    <string name="app_name">profesionesApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="strDontHaveAccount">¿No tienes cuenta? ,</string>
    <string name="strCreateHere">crea una aquí</string>

    <string name="strDontHaveAccountSocio">¿Quieres ser socio y no tienes cuenta? ,</string>
    <string name="strCreateHereSocio">crea una aquí</string>
    <string name="strTransitionNamePicture">TransitionNamePicture</string>

    <string name="strSecondWordDetail">Me gusta</string>
    <string name="strTitleImageDetail">\"Menu desplegable\"</string>
    <string name="lorem">Agendar cita,Historial del cliente,facturacion,Finanzas,Declaracion mensual,Declaracion anual, Ajustes</string>
    <string name="hint_NombreUsuario">Nombre de Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro_usuario">RegistroUsuarioActivity</string>
    <string name="title_activity_inicio">InicioActivity</string>
</resources>
