<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tesis.profesionesapp.controlador.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/idBtnInicio"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/idDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDontHaveAccount"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount" />

                <TextView
                    android:id="@+id/idRegistroLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCreateHere"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount"
                    android:layout_toRightOf="@+id/idDontHaveAccount"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/idDontHaveAccountSocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strDontHaveAccountSocio"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount" />

                <TextView
                    android:id="@+id/idRegistroLoginSocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCreateHereSocio"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    android:textSize="@dimen/dimenDontHaveAccount"
                    android:layout_toRightOf="@+id/idDontHaveAccountSocio"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>